--- a/nodejs-microservice/Dockerfile
+++ b/nodejs-microservice/Dockerfile
@@ -1,18 +1,23 @@
 # Use Node v8 as the base image.
-FROM node:8
+FROM node:20-alpine AS builder
 
 # create and set app directory
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
 COPY package*.json ./
-RUN npm install
 
-# Bundle app source
+
+#install only production dependencies
+RUN npm ci --only=production  # Bundle app source
+
+# Copy the rest of the application
 COPY . .
+
+# Build the application (if required)
+RUN npm run build
 
 # Run app
 CMD ["npm", "start"]
